Updated footer & navbar in team page

--- a/css/teams.css
+++ b/css/teams.css
@@ -608,213 +608,9 @@ section {
     text-transform: uppercase;
     margin-top: 5px;
   }
-
-
-
------------------------------------------------------------------------------------------------
-
-
-/*---------------------------------------
-   MENU
------------------------------------------*/
-
-#menu {
-  padding-bottom: 0;
-}
-
-#menu .container {
-  width: 100%;
-}
-
-#menu .col-md-4 {
-  margin: 0;
-  padding: 0;
-}
-
-.menu-thumb img {
-  width: 100%;
-  transition: 0.5s;
-}
-
-.menu-thumb:hover img {
-  transform: scale(1.15);
-}
-
-#menu .menu-thumb {
-  overflow: hidden;
-  position: relative;
-  cursor: pointer;
-  width: 102%;
-}
-
-.menu-thumb .menu-info {
-  position: absolute;
-  top: 60%;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  text-align: left;
-  padding: 25px 30px;
-  transition: 0.5s 0.2s;
-}
-
-.menu-info .menu-item {
-  float: left;
-}
-
-.menu-info .menu-price {
-  float: right;
-}
-
-.menu-info .menu-price span {
-  font-size: 20px;
-  font-weight: bold;
-  line-height: normal;
-  display: block;
-  margin-top: 10px;
-}
-
-.menu-thumb .menu-info h3,
-.menu-thumb .menu-info p,
-.menu-thumb .menu-info span {
-  transform: translateY(100%);
-  opacity: 0;
-  display: block;
-  transition: 0.5s 0.2s;
-  color: #ffffff;
-  z-index: 2;
-  position: relative;
-}
-
-.menu-thumb .menu-info h3 {
-  margin-top: 0;
-}
-
-.menu-thumb .menu-info p {
-  color: #d9d9d9;
-  text-transform: uppercase;
-  font-size: 10px;
-  font-weight: bold;
-  letter-spacing: 1px;
-}
-
-.menu-thumb:hover .menu-info h3,
-.menu-thumb:hover .menu-info p,
-.menu-thumb:hover .menu-info span {
-  transform: translateY(0px);
-  opacity: 1;
-}
-
-.menu-thumb:hover .menu-info {
-  background: rgba(0,0,0,0.8);
-}
-
-
-
-/*---------------------------------------
-    TESTIMONIAL
------------------------------------------*/
-
-#testimonial {
-  background: url('../images/testimonial-bg.jpg') center center no-repeat;
-  background-size: cover;
-}
-
-#testimonial .owl-dots {
-  position: relative;
-  top: 0;
-  right: 0;
-  justify-content: center;
-}
-
-#testimonial .owl-theme .owl-dots .owl-dot,
-#testimonial .owl-theme .owl-dots .owl-dot span {
-  display: inline-block;
-}
-
-#testimonial .owl-theme .owl-dots .owl-dot span {
-  margin: 20px 5px;
-}
-
-#testimonial h2 {
-  color: #ffffff;
-}
-
-#testimonial p,
-.tst-author h4,
-.tst-author span {
-  display: inline;
-}
-
-#testimonial p {
-  color: #d9d9d9;
-  font-size: 20px;
-  line-height: 35px;
-}
-
-.tst-author {
-  margin-top: 20px;
-}
-
-.tst-author h4,
-.tst-author span {
-  color: #b2b2b2;
-}
-
-.tst-author span {
-  margin-left: 5px;
-}
-
-
-
-/*---------------------------------------
-    CONTACT
------------------------------------------*/
-
-#contact .section-title {
-  padding-bottom: 0;
-}
-
-#contact .text-success,
-#contact .text-danger {
-  display: none;
-}
-
-#contact .form-control {
-  background: transparent;
-  border: 0;
-  border-bottom: 1px solid #dddddd;
-  border-radius: 0;
-  box-shadow: none;
-  font-size: 14px;
-  font-weight: normal;
-  margin-bottom: 15px;
-  transition: all ease-in-out 0.4s;
-}
-
-#contact .form-control:hover,
-#contact .form-control:focus {
-  border-bottom-color: #c9c9c9;
-}
-
-#contact input {
-  height: 55px;
-}
-
-#contact button#cf-submit {
-  background: #ce3232;
-  border-radius: 0;
-  border: 0;
-  color: #ffffff;
-  font-weight: bold;
-  height: 50px;
-}
-
-#contact button#cf-submit:hover {
-  background: #292929;
-  color: #ffffff;
-}
-
+  .team-info h4{
+    color: #5c5858eb;
+  }
 
 
 /*---------------------------------------
@@ -824,7 +620,7 @@ section {
 footer {
   border-top: 1px solid rgba(0,0,0,0.05);
   padding: 120px 0;
-  padding-bottom: 80px;
+  padding-bottom: 40px;
 }
 
 footer .section-title {
@@ -853,44 +649,24 @@ footer .social-icon {
   margin-top: 20px;
 }
 
-.footer-open-hour {
-  background: #ce3232;
-  background: url('../images/dsc/dscauce-logo.png') center center no-repeat;
-  background-size: cover;
-  border-radius: 20px;
-  margin-top: 0;
-  padding: 40px 0 40px 80px;
-  overflow: hidden;
-  position: relative;
-  z-index: 22;
-  right: 20px;
-  bottom: 20px;
-}
 
-.footer-open-hour::after {
-  /*background: rgba(29,29,29,0.85);*/
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -2222;
-}
 
-.footer-open-hour h2 {
-  color: #ffffff;
-}
+/*---------------------------------------
+     COPYRIGHT AREA         
+  -----------------------------------------*/
+  #copyright-area {
+    text-align: center;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    padding: 20px auto;
+    background-color: #f9f9f9;
+  }
+  #copyright-area p{
+    padding: 10px auto;
+    margin: 20px;
+  }
 
-.footer-open-hour p {
-  color: #d9d9d9;
-}
-
-.footer-open-hour strong {
-  color: #f9f9f9;
-}
 
 
 
@@ -928,6 +704,18 @@ footer .social-icon {
   color: #ffffff;
 }
 
+ .footer-contact-info{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+ .footer-contact-info i{
+  color: #ce3232;
+ }
+
+ .footer-contact-info li a:hover{
+   color: #000000;
+ }
 
 
 /*---------------------------------------
@@ -1054,7 +842,7 @@ footer .social-icon {
 
   footer {
     padding: 60px 0;
-    padding-bottom: 60px;
+    padding-bottom: 0px;
   }
 
   .footer-open-hour {
