Added animations for team page.
Created events page.
Created a preloader for dsc auce.
To Do: 
1. Modify the events page (Neelima & Venkatraman).
2. Modify the home page for team section (Niveditha).
3. Change all the linkedin url's to the actual ones (Sanjana Killi).
4. Complete the carousel (later stage)

--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@
   .custom-navbar .nav li a {
     font-size: 12px;
     font-weight: bold;
-    color: #ffffff;
+    color: black;
     padding-right: 22px;
     padding-left: 22px;
     text-transform: uppercase;
