--- a/css/style.css
+++ b/css/style.css
@@ -677,6 +677,7 @@
 
   footer h2 {
     font-size: 20px;
+    text-shadow: 1px 2px 2px rgba(0,0,0,0.2);
   }
 
   footer a,
@@ -722,41 +723,44 @@
   -----------------------------------------*/
 
   .social-icon {
-    position: relative;
-    padding: 0;
-    margin: 0;
-  }
+  position: relative;
+  padding: 0;
+  margin: 0;
+}
 
-  .social-icon li {
-    display: inline-block;
-    list-style: none;
-    margin-bottom: 5px;
-  }
+.social-icon li {
+  display: inline-block;
+  list-style: none;
+  margin-bottom: 5px;
+}
 
-  .social-icon li a {
-    border-radius: 100px;
-    color: #ce3232;
-    font-size: 15px;
-    width: 35px;
-    height: 35px;
-    line-height: 35px;
-    text-decoration: none;
-    text-align: center;
-    transition: all 0.4s ease-in-out;
-    position: relative;
-  }
+.social-icon li a {
+  border-radius: 100px;
+  color: #797777 !important;
+  font-size: 23px;
+  width: 35px;
+  height: 35px;
+  line-height: 35px;
+  text-decoration: none;
+  text-align: center;
+  transition: all 0.4s ease-in-out;
+  position: relative;
+}
 
-  .social-icon li a:hover {
-    background: #ce3232;
-    color: #ffffff;
-  }
-  .footer-contact-info{
+.social-icon li a:hover {
+  background: black;
+  color: #ffffff !important;
+}
+
+ .footer-contact-info{
     list-style: none;
     padding: 0;
     margin: 0;
   }
  .footer-contact-info i{
-  color: #ce3232;
+  color: #797777;
+  font-size: 23px;
+  padding-bottom: 40px;
  }
 
  .footer-contact-info li a:hover{
