--- a/css/teams.css
+++ b/css/teams.css
@@ -618,37 +618,39 @@ section {
    FOOTER
 -----------------------------------------*/
 
-footer {
-  border-top: 1px solid rgba(0,0,0,0.05);
-  padding: 120px 0;
-  padding-bottom: 40px;
-}
+ footer {
+    border-top: 1px solid rgba(0,0,0,0.05);
+    padding: 120px 0;
+    padding-bottom: 40px;
+  }
 
-footer .section-title {
-  padding-bottom: 10px;
-}
+  footer .section-title {
+    padding-bottom: 10px;
+  }
 
-footer h2 {
-  font-size: 20px;
-}
+  footer h2 {
+    font-size: 20px;
+    text-shadow: 1px 2px 2px rgba(0,0,0,0.2);
+  }
 
-footer a,
-footer p {
-  color: #909090;
-}
+  footer a,
+  footer p {
+    color: #909090;
+    text-shadow: none;
+  }
 
-footer strong {
-  color: #d9d9d9;
-}
+  footer strong {
+    color: #d9d9d9;
+  }
 
-footer address p {
-  margin-bottom: 0;
-}
+  footer address p {
+    margin-bottom: 0;
+  }
 
-.footer-info,
-footer .social-icon {
-  margin-top: 20px;
-}
+  .footer-info,
+  footer .social-icon {
+    margin-top: 20px;
+  }
 
 
 
@@ -675,7 +677,7 @@ footer .social-icon {
    SOCIAL ICON
 -----------------------------------------*/
 
-.social-icon {
+ .social-icon {
   position: relative;
   padding: 0;
   margin: 0;
@@ -711,12 +713,15 @@ footer .social-icon {
     margin: 0;
   }
  .footer-contact-info i{
-  color: #ce3232;
+  color: #797777;
+  font-size: 23px;
+  padding-bottom: 40px;
  }
 
  .footer-contact-info li a:hover{
    color: #000000;
  }
+
 
 
 /*---------------------------------------
