--- a/css/style.css
+++ b/css/style.css
@@ -420,7 +420,8 @@ section {
 }
 @media (max-width: 767px) {
   #myVideo {
-    display: none;
+    width: 100%;
+    height: 100%;
   }
   body {
     background: url("");
